--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                     </div>
+                    <div class="col-12 col-sm-6">
+                        <img class="col-sm-6" src="img/logo.png" alt="logo">
+                        <button class="btn btn-warning btn-sm col-sm-4 offset-1" type="button"><a href="#reserve-table">Reserve Table</a></button>
+                    </div>
                 </div>
                 <div class="col-12 col-sm">
                 </div>
@@ -56,7 +60,7 @@
                     <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/uthappizza.png" alt="uthappizza">
                     <div class="media-body">
                     <h2 class="mt-0">Uthappizza <span class="badge badge-danger">HOT</span> <span class="badge badge-pill badge-secondary">$4.99</span></h2>
-                <p>A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
+                <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
                 </div>    
             </div>
             </div>
@@ -68,8 +72,13 @@
                 <h3>This Month's Promotions</h3>
             </div>
             <div class="col-12 col-sm col-md">
-                <h2>Weekend Grand Buffet</h2>
-                <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                <div class="media">
+                    <div class="media-body">
+                        <h2 class="mt-0">Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
+                        <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person. </p>
+                    </div>
+                <img class="d-flex ml-3 img-thumbnail align-self-center" src="img/buffet.png" alt="buffet">   
+            </div>    
             </div>
         </div>
 
@@ -83,11 +92,62 @@
                 <div class="media-body">
                 <h2 class="mt-0">Alberto Somayya</h2>
                 <h4>Executive Chef</h4>
-                <p>Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
+                <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
                 </div>    
             </div>
             </div>
         </div>
+    </div>
+
+    <div class="card col-12 col-md-6 offset-md-3 mb-3">
+        <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
+    <div class="row card-body">
+        <form class="col-12" id="reserve-table">
+            <div class="form-group row">
+                <label for="no-of-guests" class="col-12 col-md-2 col-form-label">Number of Guests</label>
+                <div class="col-12 col-md-10">
+                <div class="form-check form-check-inline">
+                    <input type="radio" class="form-check-input" name="one" id="one" value="">
+                    <label class="form-check-label" for="one">1</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input type="radio" class="form-check-input" name="two" id="two" value="">
+                    <label class="form-check-label" for="two">2</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input type="radio" class="form-check-input" name="three" id="three" value="">
+                    <label class="form-check-label" for="three">3</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input type="radio" class="form-check-input" name="four" id="four" value="">
+                    <label class="form-check-label" for="four">4</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input type="radio" class="form-check-input" name="five" id="five" value="">
+                    <label class="form-check-label" for="five">5</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input type="radio" class="form-check-input" name="six" id="six" value="">
+                    <label class="form-check-label" for="six">6</label>
+                </div>
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="date-time" class="col-12 col-md-2 col-form-label">Date and Time</label>
+                <div class="col-12 col-md-2">
+                    <input type="date" class="form-control" name="Date" id="Date" value="">
+                </div>
+                <div class="col-12 col-md-2">
+                    <input type="time" class="form-control" name="Time" id="Time" value="">
+                </div>
+            </div>
+            <div class="form-group row">
+                <div class="col-12 col-md-2 offset-md-2">
+                    <button type="submit" class="btn btn-primary">Reserve</button>
+                </div>
+            </div>
+        </form>
+    </div>
     </div>
 
     <footer class="footer">
