--- a/index.html
+++ b/index.html
@@ -75,6 +75,74 @@
         </div>
     </div>
 
+    <div id="reserve-modal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Reserve a Table</h4>
+                    <button class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <form class="col-12">
+                        <div class="form-group row">
+                            <label for="no-of-guests" class="col-12 col-md-2 col-form-label">Number of Guests</label>
+                            <div class="col-12 col-md-10">
+                            <div class="form-check form-check-inline">
+                                <input type="radio" class="form-check-input" name="one" id="one" value="">
+                                <label class="form-check-label" for="one">1</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input type="radio" class="form-check-input" name="two" id="two" value="">
+                                <label class="form-check-label" for="two">2</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input type="radio" class="form-check-input" name="three" id="three" value="">
+                                <label class="form-check-label" for="three">3</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input type="radio" class="form-check-input" name="four" id="four" value="">
+                                <label class="form-check-label" for="four">4</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input type="radio" class="form-check-input" name="five" id="five" value="">
+                                <label class="form-check-label" for="five">5</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input type="radio" class="form-check-input" name="six" id="six" value="">
+                                <label class="form-check-label" for="six">6</label>
+                            </div>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="section" class="col-12 col-md-2 col-form-label">Section</label>
+                            <div class="btn-group btn-group-toggle col-md-10" data-toggle="buttons">
+                                <label class="btn btn-success active">
+                                    <input type="radio" name="options" id="option1" autocomplete="off" checked> Non-Smoking
+                                </label>
+                                <label class="btn btn-danger">
+                                    <input type="radio" name="options" id="option2" autocomplete="off"> Smoking
+                                </label>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="date-time" class="col-12 col-md-2 col-form-label">Date and Time</label>
+                            <div class="col-12 col-md-2">
+                                <input type="date" class="form-control" name="Date" id="Date" value="">
+                            </div>
+                            <div class="col-12 col-md-2">
+                                <input type="time" class="form-control" name="Time" id="Time" value="">
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <button type="button" class="btn btn-secondary btn-sm ml-auto" data-dismiss="modal">Cancel</button>
+                            <button type="submit" class="btn btn-primary btn-sm ml-1">Reserve</button>        
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <header>
         <div class="jumbotron">
             <div class="container">
@@ -85,7 +153,7 @@
                     </div>
                     <div class="col-12 col-sm-6">
                         <img class="col-sm-6" src="img/logo.png" alt="logo">
-                        <button class="btn btn-warning btn-sm col-sm-4 offset-1" data-toggle="tooltip" data-html="true" title="Or Call us at <br><strong>+852 12345678</strong>" data-placement="bottom" type="button"><a href="#reserve-table" id="res-button">Reserve Table</a></button>
+                        <button class="btn btn-warning btn-sm col-sm-4 offset-1" type="button"><a data-toggle="modal" data-target="#reserve-modal">Reserve Table</a></button>
                     </div>
                 </div>
                 <div class="col-12 col-sm">
@@ -93,6 +161,49 @@
             </div>
         </div>
     </header>
+
+    <div class="container">
+        <div class="row row-content">
+            <div class="col">
+                <div id="mycarousel" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner" role="listbox">
+                        <div class="carousel-item active">
+                            <img class="d-block img-fluid" src="img/uthappizza.png" alt="uthappizza">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h2>Uthappizza <span class="badge badge-danger">HOT</span> <span class="badge badge-pill badge-secondary">$4.99</span></h2>
+                                <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block img-fluid" src="img/buffet.png" alt="buffet">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h2>Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
+                                <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person. </p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block img-fluid" src="img/alberto.png" alt="alberto">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h4>Executive Chef</h4>
+                                <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
+                            </div> 
+                        </div>
+                    </div>
+                    <ol class="carousel-indicators">
+                        <li data-target="#mycarousel" data-slide-to="0" class="active"></li>
+                        <li data-target="#mycarousel" data-slide-to="1"></li>
+                        <li data-target="#mycarousel" data-slide-to="2"></li>
+                    </ol>
+                    <a class="carousel-control-prev" href="#mycarousel" role="button" data-slide="previous"><span class="carousel-control-prev-icon"></span></a>
+                    <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next"><span class="carousel-control-next-icon"></span></a>
+                    <div class="btn-group" id="carousel-buttons">
+                        <button class="btn btn-danger btn-sm" id="carousel-pause"><scan class="fa fa-pause"></scan></button>
+                        <button class="btn btn-danger btn-sm" id="carousel-play"><scan class="fa fa-play"></scan></button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <div class="container">
         <div class="row row-content align-items-center"> 
@@ -143,56 +254,7 @@
         </div>
     </div>
 
-    <div class="card col-12 col-md-6 offset-md-3 mb-3">
-        <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
-    <div class="row card-body">
-        <form class="col-12" id="reserve-table">
-            <div class="form-group row">
-                <label for="no-of-guests" class="col-12 col-md-2 col-form-label">Number of Guests</label>
-                <div class="col-12 col-md-10">
-                <div class="form-check form-check-inline">
-                    <input type="radio" class="form-check-input" name="one" id="one" value="">
-                    <label class="form-check-label" for="one">1</label>
-                </div>
-                <div class="form-check form-check-inline">
-                    <input type="radio" class="form-check-input" name="two" id="two" value="">
-                    <label class="form-check-label" for="two">2</label>
-                </div>
-                <div class="form-check form-check-inline">
-                    <input type="radio" class="form-check-input" name="three" id="three" value="">
-                    <label class="form-check-label" for="three">3</label>
-                </div>
-                <div class="form-check form-check-inline">
-                    <input type="radio" class="form-check-input" name="four" id="four" value="">
-                    <label class="form-check-label" for="four">4</label>
-                </div>
-                <div class="form-check form-check-inline">
-                    <input type="radio" class="form-check-input" name="five" id="five" value="">
-                    <label class="form-check-label" for="five">5</label>
-                </div>
-                <div class="form-check form-check-inline">
-                    <input type="radio" class="form-check-input" name="six" id="six" value="">
-                    <label class="form-check-label" for="six">6</label>
-                </div>
-                </div>
-            </div>
-            <div class="form-group row">
-                <label for="date-time" class="col-12 col-md-2 col-form-label">Date and Time</label>
-                <div class="col-12 col-md-2">
-                    <input type="date" class="form-control" name="Date" id="Date" value="">
-                </div>
-                <div class="col-12 col-md-2">
-                    <input type="time" class="form-control" name="Time" id="Time" value="">
-                </div>
-            </div>
-            <div class="form-group row">
-                <div class="col-12 col-md-2 offset-md-2">
-                    <button type="submit" class="btn btn-primary">Reserve</button>
-                </div>
-            </div>
-        </form>
-    </div>
-    </div>
+    
 
     <footer class="footer">
         <div class="container">
@@ -241,9 +303,14 @@
 <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 <script>
     $(document).ready(function(){
-        $('[data-toggle="tooltip"]').tooltip();
+        $("#mycarousel").carousel( { interval: 2000 } );
+        $("#carousel-pause").click(function(){
+            $("#mycarousel").carousel('pause');
+        });
+        $("#carousel-play").click(function(){
+            $("#mycarousel").carousel('cycle');
+        });
     });
-
 </script>
 </body>
 
